Moving Service update

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -60,15 +60,29 @@
   "homeService5Question": "Additionally, upon request",
   "homeService5Answer": "- Moving heavy furniture (over 6 kg) and cleaning behind it\n- Cleaning the balcony (e.g., floor, furniture)\n- Cleaning the cabinets from the inside\n- Cleaning surfaces over 1.8 m (requires a small ladder or stool)\n- Wiping the entire height of the bathroom walls\n- Cleaning of radiators\n- Cleaning the blinds from dust\n- Cleaning plants from dust\n- Sauna washing +30-45 min (depending on the size of the sauna)\n- Cleaning the inside of the refrigerator +45-60 min/single-door refrigerator\n- Cleaning the inside of the oven +45-75 min (depending on the cleaning need)\n- Ironing",
   "movingService1Question": "In general / all spaces",
-  "movingService1Answer": "- Wardrobes and wardrobe doors wiped in and out (Cleaning the cabinets from the inside requires that they are empty.)\n- Doors, door frames, and window frames wiped\n- Mirrors and chrome fixtures cleaned and polished\n- Floor vacuumed and mopped, baseboards dusted\n- Light switches wiped, electric sockets dusted\n- Wall stains removed (if possible). Please note that in some cases cleaning stains from the wall may leave a mark on the wall surface.\n- Wall vents dusted from the outside\n- Lamp shades dusted (if present)",
+  "movingService1Answer": "- All shelves and level surfaces (less than 180cm in height)\n- Doors and door frames (no deep stain removal)\n- Door handles and light switches\n- Mirrors and glass surfaces\n- Radiators and ventilators\n- Tile walls\n- Painted walls (only dusting & dry wiping)\n- Cabinets, wardrobes, closets etc. – inside and outside\n- Vacuuming floors and skirting boards\n- Mopping floors (if floor material suitable for damp mopping)",
   "movingService2Question": "Kitchen",
-  "movingService2Answer": "- Cleaning the kitchen cabinets from the inside and outside (Cleaning the cabinets from the inside requires that they are empty.)\n- All horizontal surfaces wiped\n- Kitchen splashback tiles wiped\n- Microwave (inside and outside)\n- Outer surfaces of: oven, fridge (deep oven and fridge cleaning must be booked separately)\n- Garbage area and bins deep cleaned\n- Oven hood (except the filter)\n- Stove removed and deep cleaned from each side, including the back wall (if stove removal is possible)\n- Sink cleaned and polished",
+  "movingService2Answer": "- Level surfaces\n- Sink, faucet\n- Tile walls\n- Oven hood (except the filter)\n- Microwave (inside and outside)\n- All cabinets + cabinet doors (inside and outside, including trash bins)\n- Outer surfaces of: oven, fridge (deep oven and fridge cleaning must be booked separately)",
   "movingService3Question": "Toilet and bathroom",
-  "movingService3Answer": "- Wall tiles wiped floor to ceiling\n- Floor tiles brushed\n- Floor drains cleaneds\n- Limescale removed where possible\n- Shower door deep cleaned (if present)\n- Sink, toilet, and faucets cleaned and polished; all taps cleaned and polished\n- Sauna deep cleaned (if present) + sauna door cleaned and polished",
-  "movingService4Question": "Upon request",
-  "movingService4Answer": "- Balcony: floor & surfaces (no deep stain removal for concrete floor) - 30’\n- Fridge and freezer (must be completely empty & melted beforehand) - 30’",
+  "movingService3Answer": "- Sink, faucet\n- Mirrors and glass surfaces\n- Shower area and bathtub\n- Cabinets (inside and outside)\n- Tile walls and visible pipes\n- Floor and floor drain\n- Toilet bowl",
+  "movingService4Question": "Separately ordered services",
+  "movingService4Answer": "- Sauna (floor, benches, glass door) - 1hr\n- Fridge and freezer (must be completely empty & melted beforehand) - 30’\n- Oven (inside + outside) – customer must move the oven beforehand - 1hr\n- Balcony: floor & surfaces (no deep stain removal for concrete floor) - 30’",
   "movingService5Question": "Not included in the service",
-  "movingService5Answer": "- Oven hood filter\n- Unclogging drains / pipes\n- Moving heavy furniture (including bulky trash)\n- Anything above 180cm\n- Window cleaning",
+  "movingService5Answer": "- Oven hood filter\n- Deep stain removal from doors & walls\n- Unclogging drains / pipes\n- Moving heavy furniture (including bulky trash)\n- Anything above 180cm\n- Window cleaning (can be ordered separately)",
+  "officeService1Question": "Lobbies",
+  "officeService1Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Vacuum cleaning and washing the floors\n- Wiping of door handles and circuit breakers\n- Wiping mirrors and tables\n- Wiping window ledges\n- Ensuring general cleanliness\n- Cleaning of glass doors / walls",
+  "officeService2Question": "Kitchen",
+  "officeService2Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Vacuum cleaning and washing the floors\n- Wiping of door handles and circuit breakers\n- Wiping from the outside of the refrigerator and other kitchen cabinets\n- Wiping all levels\n- Wiping of dining chairs and table\n- Dismounting and filling the dishwasher\n- Ensuring general cleanliness",
+  "officeService3Question": "Conference rooms",
+  "officeService3Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Vacuum cleaning and washing the floors\n- Wiping of door handles and circuit breakers\n- Wiping of chairs (if needed)\n- Arrangement of chairs\n- Wipe the tables / levels / TV\n- Wiping of shelves and cabinets\n- Ensuring general cleanliness",
+  "officeService4Question": "Toilets",
+  "officeService4Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Washing the floors\n- Wiping of door handles and circuit breakers\n- Wiping mirrors and levels\n- Filling the all sanitary supplies. (Toilet paper, hand paper and hand soap)\n- Disinfecting wash basin and sinks\n- Ensuring general cleanliness",
+  "officeService5Question": "Open floor office",
+  "officeService5Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Vacuum cleaning and washing the floors\n- Wiping of door handles and circuit breakers\n- Putting the chairs beautifully in front of the workstations\n- Wiping shelves and levels\n- Wiping only empty space of the workstations\n- Ensuring general cleanliness",
+  "officeService6Question": "Copy rooms",
+  "officeService6Answer": "- Wiping of shelves and cabinets\n- Emptying the paper bin",
+  "officeService7Question": "Cleaning closets",
+  "officeService7Answer": "- Maintenance and inspection of cleaning equipments",
   "homeCleaning": "Home Cleaning: 38 €/h (Inc. VAT)",
   "officeAirbnbCleaning": "Office or Airbnb Cleaning: 29 €/h + VAT",
   "movingCleaning": "Moving Cleaning: 44 €/h (Inc. VAT)",
@@ -78,7 +92,7 @@
   "firstTimePackage2": "Package 2",
   "firstTimePackage2Price": "100 €/5h (Inc. VAT) **",
   "firstTimePackageNote": "** Any extra hour will be charged at normal price",
-  "homeOrDeepCleaning": "Home cleaning or deep cleaning",
+  "firstTimeHomeCleaning": "Home cleaning",
   "interestingFact": "Interesting Fact",
   "taxCreditHighlight": "You can claim tax credit equal to 35% of your cleaning expense.",
   "taxCreditDetails": "As our customer, you can request us to make a yearly tax summary for your cleaning so that you can claim your tax credit for household expenses easily and simply. You'll get 35% of the amount you paid back (threshold 150 euros).",
@@ -122,5 +136,8 @@
   "packageNote2": "28,6 €/h after tax deduction",
   "homeCleaningServices": "Home Cleaning",
   "movingCleaningServices": "Moving Cleaning",
-  "officeCleaningServices": "Office Cleaning"
+  "officeCleaningServices": "Office Cleaning",
+  "officeCleaningServicesHeading": "Commercial/Office Cleaning",
+  "movingSlogan": "Let 3C Cleaning Take the Stress Out of Your Move!",
+  "movingParagraph": "Moving can be a hassle, but it doesn't have to be. Let 3C Cleaning's trained professional cleaners handle the tedious scrubbing and mopping, so you can focus on everything else. Ensure you have electricity and water on move-out day, as well as all the necessary cleaning equipment and supplies, including detergents, mops, vacuum cleaners, microfiber towels, sponges, brushes, etc. Book your moving cleaning online and experience a seamless transition with 3C Cleaning!"
 }
