--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -59,14 +59,30 @@
   "homeService4Answer": "- Kuvakehysten, lampunvarjostimien ja korkeiden vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Sängyn petaaminen\n- Sohvan ja pehmustettujen huonekalujen imurointi\n- Vuodevaatteiden vaihto",
   "homeService5Question": "Lisäksi pyynnöstä",
   "homeService5Answer": "- Raskaiden huonekalujen (yli 6 kg) siirtäminen ja niiden takana siivoaminen\n- Parvekkeen puhdistus (esim. lattia, huonekalut)\n- Kaappien sisäpintojen puhdistus\n- Pinta-alojen puhdistus yli 1,8 m korkeudella (vaatii pienen tikkaat tai jakkaran)\n- Kylpyhuoneen seinien koko korkeuden pyyhintä\n- Pattereiden puhdistus\n- Kaihtimien pölyjen puhdistus\n- Kasvien pölyjen puhdistus\n- Saunan pesu +30-45 min (saunan koosta riippuen)\n- Jääkaapin sisäpintojen puhdistus +45-60 min/yksittäinen jääkaappi\n- Uunin sisäpintojen puhdistus +45-75 min (siivoustarpeesta riippuen)\n- Silittäminen",
-  "movingService1Question": "Yleisesti kaikissa tiloissa",
-  "movingService1Answer": "- Vaakapintojen pölypyyhintä\n- Vaatekaappien ja vaatekaappiovien pyyhintä sisältä ja ulkoa (sisäpyyhintä onnistuu, mikäli kaapit ovat tyhjillään)\n- Ovien, ovenpielien ja ikkunoiden pyyhkiminen\n- Peilien ja kromipintojen puhdistaminen ja kiillottaminen\n- ILattioiden imuroiminen ja moppaaminen sekä jalkalistojen pölyistä pyyhintä\n- Valokatkaisijoiden ja pistorasioiden putsaus\n- Seinätahrojen poisto mahdollisuuksien mukaan (huomioithan, että joissain tapauksissa puhdistus saattaa jättää jäljen seinän pintaan)\n- Ilmanvaihtoventtiilien puhdistaminen pölystä ulkopuolelta\n- Mahdollisten lampunvarjostimien pölypyyhintä",
-  "movingService2Question": "Keittiössä",
-  "movingService2Answer": "- Keittiökaappien puhdistus sisä- ja ulkopuolelta\n- Pöytätasojen puhdistus\n- Keittiön seinälevyn/laattaseinien puhdistus\n- Liesituuletin (ei suodatinta)\n- Roskakaapin ja roska-astioiden puhdistus\n- Mikroaaltouuni (sisä- ja ulkopuolelta)\n- Uunin ja jääkaapin ulkopinnat (uunin ja jääkaapin täyspuhdistus tilattava erikseen)\n- Lieden puhdistus ja puhdistus hellan sivuilta ja takaa (edellyttää hellan siirtämisen, mikäli se on mahdollista)\n- Pesualtaan puhdistus ja kiillotus",
-  "movingService3Question": "Kylpyhuone ja WC",
-  "movingService3Answer": "- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Pesualtaan ja kylpyammeen pesu\n- WC-istuimen ja sen ympäristön puhdistus\n- Hanojen ja suihkupään puhdistus\n- Suihkuseinän puhdistus\n- Lattiakaivon ritilän puhdistus suihkutilassa\n- Saunan oven puhdistus\n- Saunan lattian imurointi ja moppaus mahdollisuuksien mukaan\n- Pesukoneen ja kuivausrummun ulkopintojen tahrojen puhdistus",
-  "movingService4Question": "Makuuhuoneessa ja muissa huoneissa",
-  "movingService4Answer": "- Kuvakehysten, lampunvarjostimien ja korkeiden vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Sängyn petaaminen\n- Sohvan ja pehmustettujen huonekalujen imurointi\n- Vuodevaatteiden vaihto",
+  "movingService1Question": "Yleisesti / kaikki tilat",
+  "movingService1Answer": "- Hyllyt ja tasopinnat (alle 180cm korkeus)\n- Ovet ja ovien karmit (ei pinttyneiden tahrojen poistoa)\n- Ovien kahvat ja valokatkaisijat\n- Peilit ja lasipinnat\n- Patterit ja tuulettimet\n- Laattaseinät\n- Maalatut seinät (pölyjen poistaminen kuivalla liinalla)\n- Vaatekaapit ja -huoneet (sisä- ja ulkopuolelta)\n- Lattioiden ja listojen imurointi\n- Lattioiden pesu (jos lattiamateriaali soveltuva kostealla pyyhkeellä moppaamiseen)",
+  "movingService2Question": "Keittiö",
+  "movingService2Answer": "- Tasopinnat\n- Lavuaarit ja hanat\n- Laattaseinät\n- Liesituuletin (ei suodatinta)\n- Mikroaaltouuni (sisä- ja ulkopuolelta)\n- Kaikki kaapit ja ovet (sisä- ja ulkopuolelta, myös roskakorit)\n- Uunin ja jääkaapin ulkopinnat (uunin ja jääkaapin täyspuhdistus tilattava erikseen)",
+  "movingService3Question": "Vessa ja kylpyhuone",
+  "movingService3Answer": "- Hanat ja lavuaarit\n- Peilit ja lasipinnat\n- Suihku ja kylpyamme\n- Kaapit (sisä- ja ulkopuoli)\n- Laattaseinät ja näkyvät putket\n- Lattia ja lattiaviemärin pintapuolinen puhdistus\n- Vessanpönttö",
+  "movingService4Question": "Erikseen tilattavat palvelut",
+  "movingService4Answer": "- Sauna (lattia, penkit, lasiovi – 1 h)\n- Jääkaappi ja pakastin (kaappien tulee olla täysin tyhjät ja sulatetut etukäteen) – 30 min\n- Uuni (sisä- ja ulkopuolelta) – asiakkaan tulee siirtää uuni etukäteen – 1 h\n- Parveke: lattia ja pinnat (ei pinttyneiden tahrojen poistoa betonilattiasta) – 30 min",
+  "movingService5Question": "Palveluun ei kuulu",
+  "movingService5Answer": "- Liesituulettimen suodatin\n- Pinttyneiden tahrojen poisto ovista ja seinistä\n- Viemäreiden ja putkien tukosten avaaminen\n- Raskaiden huonekalujen siirtäminen (mukaan lukien suuret muuttoroskat)\n- Yli 180 cm korkeudella sijaitsevat kohteet\n- Ikkunanpesu (tilauksen voi tehdä erikseen)",
+  "officeService1Question": "Aulat",
+  "officeService1Answer": "Roska-astioiden tyhjennys ja tarvittaessa puhdistus, roskapussien vaihto\nYleisen siisteyden varmistaminen\nLattioiden ja mattojen imurointi\nLattian pyyhintä\nOvien / seinien lasiosien puhdistus\nPeilien ja taulujen pyyhintä\nIkkunalautojen pyyhintä\nOvenkahvojen, ovenpielien ja katkaisijoiden pyyhintä",
+  "officeService2Question": "Keittiö ja ruokailutilat",
+  "officeService2Answer": "Roska-astioiden tyhjennys ja tarvittaessa puhdistus, roskapussien vaihto\nTasojen pyyhintä\nRuokapöydän ja tuolien pyyhintä\nLavuaarin pyyhintä/pesu\nTiskikoneen täyttö ja tyhjennys\nYleisen siisteyden varmistaminen\nLattioiden ja mattojen imurointi\nLattian nihkeä pyyhintä\nMikron, kahvinkeittimen ja muiden kodinkoneiden pyyhintä\nJääkaapin ja keittiön kaappien pyyhintä ulkopuolelta\nAstioiden täyttö tiskikoneeseen ja täyttö\nSaippuapullon täyttö\nOvenkahvojen, ovenpielien ja katkaisijoiden pyyhintä",
+  "officeService3Question": "Neuvotteluhuoneet",
+  "officeService3Answer": "Tuolien järjestely kauniisti\nPöytien ja tasojen pyyhintä\nYleisen siisteyden varmistaminen\nMattojen huolellinen imurointi\nTuolien imurointi / pyyhintä\nHyllyjen, kaappien ja television pyyhintä\nOvenkahvojen, ovenpielien ja katkaisijoiden pyyhintä",
+  "officeService4Question": "WC-tilat",
+  "officeService4Answer": "Roska-astioiden tyhjennys ja tarvittaessa puhdistus, roskapussien vaihto\nPeilien ja tasojen pyyhintä\nLattioiden pesu\nWC-paperin, käsipaperin ja saippuan täyttö\nWC:n ja lavuaarin desinfioiva pesu\nYleisen siisteyden varmistaminen\nOvenkahvojen, ovenpielien ja katkaisijoiden pyyhintä",
+  "officeService5Question": "Toimistohuoneet",
+  "officeService5Answer": "Roska-astioiden tyhjennys ja tarvittaessa puhdistus, roskapussien vaihto\nTuolin laittaminen kauniisti työpisteen eteen\nYleisen siisteyden varmistaminen\nLattioiden ja mattojen imurointi\nLattian nihkeä pyyhintä\nTuolien imurointi / pyyhintä\nHyllyjen ja tasojen pyyhkiminen\nTyöpisteen pyyhkiminen tyhjiltä pinnoilta\nOvenkahvojen, ovenpielien ja katkaisijoiden pyyhintä",
+  "officeService6Question": "Kopiointihuone",
+  "officeService6Answer": "Hyllyjen ja tasojen pyyhkiminen\nPaperiastian tyhjentäminen",
+  "officeService7Question": "Siivoushuone",
+  "officeService7Answer": "Komeron siistiminen\nSiivousvälineiden huolto ja tarkistus",
   "estimationSectionHeading": "Arvioi siivousaikasi",
   "firstTimeCustomerOffer": "Uuden asiakkaan tarjous",
   "firstTimePackage1": "Paketti 1",
@@ -74,7 +90,7 @@
   "firstTimePackage2": "Paketti 2",
   "firstTimePackage2Price": "100 €/5h (sis. ALV) **",
   "firstTimePackageNote": "** Jokainen ylimääräinen tunti veloitetaan normaalihintaan",
-  "homeOrDeepCleaning": "Kotisiivous tai syväsiivous",
+  "firstTimehomeCleaning": "Kotisiivous",
   "offerPrice": "Hinta",
   "homeCleaning": "Kotisiivous: 38 €/h (sis. ALV)",
   "officeAirbnbCleaning": "Toimisto, Airbnb siivous: 29 €/h + ALV",
@@ -124,5 +140,8 @@
   "packageNote2": "28,6 €/h verovähennyksen jälkeen",
   "homeCleaningServices": "Kotisiivous",
   "movingCleaningServices": "Muuttosiivous",
-  "officeCleaningServices": "Toimistosiivous"
+  "officeCleaningServices": "Toimistosiivous",
+  "officeCleaningServicesHeading": "Toimitila- ja toimistosiivous",
+  "movingSlogan": "Anna 3C Cleaningin poistaa stressin liikkeestäsi!",
+  "movingParagraph": "Muutto voi olla vaikeeta, mutta sen ei tarvitse olla. Anna 3C Cleaningin koulutettujen ammattisiivoajien hoitaa työläs hankaus ja moppaus, jotta voit keskittyä kaikkeen muuhun. Varmista, että sinulla on muuttopäivänä sähkö ja vesi sekä kaikki tarvittavat siivousvälineet ja -tarvikkeet, mukaan lukien pesuaineet, mopit, pölynimurit, mikrokuitupyyhkeet, sienet, harjat jne. Varaa muuttosiivous verkossa ja koe saumaton siirtyminen 3C Cleaningin avulla!"
 }
