--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -6,7 +6,7 @@
   "english": "Englanti",
   "finnish": "Suomi",
   "learnMore": "Lue lisää",
-  "orderNow": "Tilaa nyt",
+  "orderNow": "Varaa nyt",
   "heroWords": ["Luotettava", "Uskollinen", "Rehellinen", "Uskolliset", "Uskottava", "Kunniallinen"],
   "cleaningService": "siivouspalvelu",
   "your": "",
@@ -90,7 +90,6 @@
   "firstTimePackage2": "Paketti 2",
   "firstTimePackage2Price": "100 €/5h (sis. ALV) **",
   "firstTimePackageNote": "** Jokainen ylimääräinen tunti veloitetaan normaalihintaan",
-  "firstTimehomeCleaning": "Kotisiivous",
   "offerPrice": "Hinta",
   "homeCleaning": "Kotisiivous: 38 €/h (sis. ALV)",
   "officeAirbnbCleaning": "Toimisto, Airbnb siivous: 29 €/h + ALV",
@@ -114,7 +113,7 @@
   "estimatedCleaningTime": "Arvioitu siivousaika",
   "hours": "tuntia",
   "homeNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 2 tuntia.",
-  "mmovingNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 4 tuntia.",
+  "movingNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 4 tuntia.",
   "aboutUsHeading": "Meistä",
   "quote": "3C Cleaning, me siivoamme, sinä rentoudut.",
   "subheading": "3C tarkoittaa cleaning, caring ja cheerful.",
@@ -143,5 +142,16 @@
   "officeCleaningServices": "Toimistosiivous",
   "officeCleaningServicesHeading": "Toimitila- ja toimistosiivous",
   "movingSlogan": "Anna 3C Cleaningin poistaa stressin liikkeestäsi!",
-  "movingParagraph": "Muutto voi olla vaikeeta, mutta sen ei tarvitse olla. Anna 3C Cleaningin koulutettujen ammattisiivoajien hoitaa työläs hankaus ja moppaus, jotta voit keskittyä kaikkeen muuhun. Varmista, että sinulla on muuttopäivänä sähkö ja vesi sekä kaikki tarvittavat siivousvälineet ja -tarvikkeet, mukaan lukien pesuaineet, mopit, pölynimurit, mikrokuitupyyhkeet, sienet, harjat jne. Varaa muuttosiivous verkossa ja koe saumaton siirtyminen 3C Cleaningin avulla!"
+  "movingParagraph": "Muutto voi olla vaikeeta, mutta sen ei tarvitse olla. Anna 3C Cleaningin koulutettujen ammattisiivoajien hoitaa työläs hankaus ja moppaus, jotta voit keskittyä kaikkeen muuhun. Varmista, että sinulla on muuttopäivänä sähkö ja vesi sekä kaikki tarvittavat siivousvälineet ja -tarvikkeet, mukaan lukien pesuaineet, mopit, pölynimurit, mikrokuitupyyhkeet, sienet, harjat jne. Varaa muuttosiivous verkossa ja koe saumaton siirtyminen 3C Cleaningin avulla!",
+  "date": "Toivottu päivämäärä",
+  "address": "Osoite",
+  "postcode": "Postinumero",
+  "homeCleaningPrice": "Kotisiivoushinta",
+  "homeCleaningCost": "Mitä kotisiivous maksaa?",
+  "homeCleaningHourlyRate": "38 €/h",
+  "homeCleaningAfterTax": "24,7€ €/h verovähennyksen jälkeen.",
+  "movingCleaningPrice": "Muuttosiivoushinta",
+  "movingCleaningCost": "Mitä muuttosiivous maksaa?",
+  "movingCleaningHourlyRate": "44 €/h",
+  "movingCleaningAfterTax": "28,6€ €/h verovähennyksen jälkeen."
 }
