--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -155,7 +155,7 @@
   "movingCleaningHourlyRate": "44 €/h",
   "movingCleaningAfterTax": "28,6€ €/h verovähennyksen jälkeen.",
   "officeSizePlaceholder": "Toimiston koko (m²)", 
-  "officeSloganTitle": "Professional, reliable, insured",
+  "officeSloganTitle": "Laadukas, luotettava, vakuutettu",
   "officeSloganContent": "Näitä asiakkaamme odottavat toimistosiivouspalvelulta, ja 3C Cleaning toimii joka puolella. Me mittaamme menestystämme tyytyväisyytesi perusteella, minkä vuoksi tarjoamme tyytyväisyystakuun. Lisäksi B2B-asiakaspäällikkösi on aina käytettävissäsi auttamaan sinua.",
   "companyName": "Yrityksen nimi",
   "officeCleaningPrice": "Toimistosiivouksen hinta",
