--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -116,8 +116,8 @@
   "movingNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 4 tuntia.",
   "aboutUsHeading": "Meistä",
   "quote": "3C Cleaning, me siivoamme, sinä rentoudut.",
-  "subheading": "3C tarkoittaa cleaning, caring ja cheerful.",
-  "cleaning": "Cleaning",
+  "subheading": "3C tarkoittaa clean, caring ja cheerful.",
+  "cleaning": "Clean",
   "cleaningContent": "3C Cleaningillä puhtaus on kaiken tekemisemme ytimessä. Ymmärrämme, että puhdas ympäristö ei ole vain esteettinen, vaan myös terveyttä ja tuottavuutta edistävä tila sinulle ja rakkaillesi. Asiantunteva tiimimme käyttää huipputason laitteita ja ympäristöystävällisiä puhdistusaineita varmistaakseen, että jokainen nurkka on tahraton. Asuin- ja liiketiloista räätälöimme palvelumme vastaamaan kunkin asiakkaan ainutlaatuisia tarpeita. Olemme ylpeitä huolellisuudestamme ja varmistamme, että jokainen pinta on puhdas, jotta voit nauttia puhtaan tilan mukavuudesta ja mielenrauhasta.",
   "caring": "Caring",
   "caringContent": "Asiakkaistamme ja heidän tiloistaan välittäminen erottaa 3C Cleaningin muista. Uskomme, että erinomainen siivouspalvelu kulkee käsi kädessä erinomaisen asiakaspalvelun kanssa. Omistautunut tiimimme ottaa aikaa ymmärtääkseen erityistarpeesi ja mieltymyksesi varmistaakseen, että palvelumme ovat räätälöityjä tarpeidesi mukaan. Olipa kyseessä erityispyyntöjen toteuttaminen tai joustavan aikataulun tarjoaminen, teemme ylimääräisen askeleen varmistaaksemme täydellisen tyytyväisyytesi. Välitämme myös ympäristöstä ja yhteisöstämme, minkä vuoksi käytämme ympäristöystävällisiä tuotteita ja tuemme paikallisia aloitteita. 3C Cleaningillä emme vain siivoa – me välitämme.",
