--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -112,8 +112,8 @@
   "movingNote": "* The final hours will depend on the frequency of cleaning, your lifestyle, the amount of furniture and other details of your home. You can also request a specific number of cleaning hours. The minimum order is 4h.",
   "aboutUsHeading": "About Us",
   "quote": "At 3C Cleaning, we clean, you relax.",
-  "subheading": "3C stands for cleaning, caring, and cheerful.",
-  "cleaning": "Cleaning",
+  "subheading": "3C stands for clean, caring, and cheerful.",
+  "cleaning": "Clean",
   "cleaningContent": "At 3C Cleaning, cleanliness is at the heart of everything we do. We understand that a clean environment is not just about aesthetics, but also about creating a healthy and productive space for you and your loved ones. Our expert team uses state-of-the-art equipment and environmentally-friendly cleaning products to ensure that every nook and cranny is spotless. From residential homes to commercial spaces, we tailor our services to meet the unique needs of each client. We pride ourselves on our attention to detail, leaving no surface untouched, so you can enjoy the comfort and peace of mind that comes with a truly clean space.",
   "caring": "Caring",
   "caringContent": "Caring for our clients and their spaces is what sets 3C Cleaning apart. We believe that exceptional cleaning services go hand in hand with exceptional customer care. Our dedicated team takes the time to understand your specific requirements and preferences, ensuring that our services are personalized to your needs. Whether it's accommodating special requests or offering flexible scheduling, we go the extra mile to make sure you are completely satisfied. We also care about the environment and our community, which is why we use eco-friendly products and support local initiatives. At 3C Cleaning, we don't just clean—we care.",
