update office service

--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -157,8 +157,8 @@
   "movingCleaningHourlyRate": "44 €/h",
   "movingCleaningAfterTax": "28,6€ €/h verovähennyksen jälkeen.",
   "officeSizePlaceholder": "Toimiston koko (m²)", 
-  "officeSloganTitle": "Laadukas, luotettava, vakuutettu",
-  "officeSloganContent": "Näitä asiakkaamme odottavat toimistosiivouspalvelulta, ja 3C Cleaning toimii joka puolella. Me mittaamme menestystämme tyytyväisyytesi perusteella, minkä vuoksi tarjoamme tyytyväisyystakuun. Lisäksi B2B-asiakaspäällikkösi on aina käytettävissäsi auttamaan sinua.",
+  "officeSloganTitle": "Kokeile 3C Cleaningin Eroa",
+  "officeSloganContent": "3C Cleaning takaa viihtyisän ympäristön työpaikallesi. Vuosiin perustuvalla kokemuksella tarjoamme korkealaatuisia ja kustannustehokkaita toimistosiivouspalveluita ympäri Suomea. Huolellisesti suunniteltu toimistosiivous takaa miellyttävän ympäristön tilojen käyttäjille, edistäen hyvinvointia ja tuottavuutta työssä. Asiakkaamme odottavat ammattitaitoisia, luotettavia ja vakuutettuja palveluita, ja 3C Cleaning täyttää kaikki nämä odotukset. Mittaamme menestystämme asiakastyytyväisyydellä, minkä vuoksi tarjoamme tyytyväisyystakuun. Lisäksi oma B2B-asiakaspäällikkösi on aina valmiina auttamaan sinua. Valitse 3C Cleaning ja koe moitteeton toimistosiivous, joka parantaa työympäristöäsi ja tukee tiimisi hyvinvointia.",
   "companyName": "Yrityksen nimi",
   "officeCleaningPrice": "Toimistosiivouksen hinta",
   "officeCleaningCost": "Mitä toimistosiivous maksaa?",
