--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -153,8 +153,8 @@
   "movingCleaningHourlyRate": "44 €/h",
   "movingCleaningAfterTax": "28,6€ €/h after-tax deduction.",
   "officeSizePlaceholder": "Office Size (m²)", 
-  "officeSloganTitle": "Professional, reliable, insured",
-  "officeSloganContent": "These are what our clients expect from an office cleaning service, and 3C Cleaning delivers on every front. We measure our success by your satisfaction, which is why we offer a satisfaction guarantee. Additionally, your dedicated B2B account manager is always available to assist you.",
+  "officeSloganTitle": "Experience the Difference with 3C Cleaning",
+  "officeSloganContent": "At 3C Cleaning, we ensure a comfortable environment for your workspace. With years of experience, we offer high-quality, cost-effective office cleaning services throughout Finland. A well-planned office cleaning routine guarantees a pleasant environment for the users of the premises, promoting well-being and productivity at work. Our clients expect professional, reliable, and insured services, and 3C Cleaning delivers on every front. We measure our success by your satisfaction, which is why we offer a satisfaction guarantee. Additionally, your dedicated B2B account manager is always available to assist you. Choose 3C Cleaning for an impeccable office cleaning experience that enhances your work environment and supports your team's well-being.",
   "companyName": "Company Name",
   "officeCleaningPrice": "Office cleaning price",
   "officeCleaningCost": "What office cleaning costs?",
