update some paragraph

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -140,7 +140,7 @@
   "officeCleaningServices": "Office Cleaning",
   "officeCleaningServicesHeading": "Commercial/Office Cleaning",
   "movingSlogan": "Let 3C Cleaning Take the Stress Out of Your Move!",
-  "movingParagraph": "Moving can be a hassle, but it doesn't have to be. Let 3C Cleaning's trained professional cleaners handle the tedious scrubbing and mopping, so you can focus on everything else. Ensure you have electricity and water on move-out day, as well as all the necessary cleaning equipment and supplies, including detergents, mops, vacuum cleaners, microfiber towels, sponges, brushes, etc. Book your moving cleaning online and experience a seamless transition with 3C Cleaning!",
+  "movingParagraph": "Moving can be a hassle, but it doesn't have to be. Let 3C Cleaning's trained professional cleaners handle the tedious scrubbing and mopping, so you can focus on everything else. Ensure you have electricity and water on move-out day, as well as all the necessary cleaning equipment like mops, vacuum cleaners, bucket etc. Book your moving cleaning online and experience a seamless transition with 3C Cleaning!",
   "date": "Preferred Date",
   "address": "Address",
   "postcode": "Postcode",
