--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -144,7 +144,7 @@
   "officeCleaningServices": "Toimistosiivous",
   "officeCleaningServicesHeading": "Toimitila- ja toimistosiivous",
   "movingSlogan": "Anna 3C Cleaningin poistaa stressin liikkeestäsi!",
-  "movingParagraph": "Muutto voi olla vaikeeta, mutta sen ei tarvitse olla. Anna 3C Cleaningin koulutettujen ammattisiivoajien hoitaa työläs hankaus ja moppaus, jotta voit keskittyä kaikkeen muuhun. Varmista, että sinulla on muuttopäivänä sähkö ja vesi sekä kaikki tarvittavat siivousvälineet ja -tarvikkeet, mukaan lukien pesuaineet, mopit, pölynimurit, mikrokuitupyyhkeet, sienet, harjat jne. Varaa muuttosiivous verkossa ja koe saumaton siirtyminen 3C Cleaningin avulla!",
+  "movingParagraph": "Muutto voi olla vaikeeta, mutta sen ei tarvitse olla. Anna 3C Cleaningin koulutettujen ammattisiivoajien hoitaa työläs hankaus ja moppaus, jotta voit keskittyä kaikkeen muuhun. Varmista, että sinulla on muuttopäivänä sähkö ja vesi sekä kaikki tarvittavat siivousvälineet mukaan lukien mopit, pölynimurit, jne. Varaa muuttosiivous verkossa ja koe saumaton siirtyminen 3C Cleaningin avulla!",
   "date": "Toivottu päivämäärä",
   "address": "Osoite",
   "postcode": "Postinumero",
