--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,6 +10,7 @@
   "heroWords": ["trustworthy", "dependable", "reliable", "faithful", "honest", "reputable"],
   "cleaningService": "cleaning service",
   "your": "Your",
+  "providedIn": "Our services are provided in Helsinki, Espoo, Vantaa and Kauniainen.",
   "benefits": "Our Benefits",
   "highQuality": "High Quality",
   "highQualityDesc": "Experience top-notch cleaning services with exceptional results.",
