--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -10,6 +10,7 @@
   "heroWords": ["Luotettava", "Uskollinen", "Rehellinen", "Uskolliset", "Uskottava", "Kunniallinen"],
   "cleaningService": "siivouspalvelu",
   "your": "",
+  "providedIn": "Palvelumme ovat saatavilla Helsingissä, Espoossa, Vantaalla ja Kauniaisissa.",
   "benefits": "Meidän Edut",
   "highQuality": "Korkea Laatu",
   "highQualityDesc": "Koe huippuluokan siivouspalvelut erinomaisilla tuloksilla.",
