update moving services

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -62,16 +62,14 @@
   "homeService4Answer": "- Dusting picture frames, lampshades, and high horizontal surfaces (at the height of max. 1.8m)\n- Making the bed\n- Vacuuming the sofa and upholstered furniture\n- Changing bed linen",
   "homeService5Question": "Additionally, upon request",
   "homeService5Answer": "- Moving heavy furniture (over 6 kg) and cleaning behind it\n- Cleaning the balcony (e.g., floor, furniture)\n- Cleaning the cabinets from the inside\n- Cleaning surfaces over 1.8 m (requires a small ladder or stool)\n- Cleaning the inside of the microwave oven\n- Wiping the entire height of the bathroom walls\n- Cleaning of radiators\n- Cleaning the blinds from dust\n- Cleaning plants from dust\n- Sauna washing +30-45 min (depending on the size of the sauna)\n- Cleaning the inside of the refrigerator +45-60 min/single-door refrigerator\n- Cleaning the inside of the oven +45-75 min (depending on the cleaning need)\n- Ironing",
-  "movingService1Question": "In general / all spaces",
-  "movingService1Answer": "- All shelves and level surfaces (less than 180cm in height)\n- Doors and door frames (no deep stain removal)\n- Door handles and light switches\n- Mirrors and glass surfaces\n- Radiators and ventilators\n- Tile walls\n- Painted walls (only dusting & dry wiping)\n- Cabinets, wardrobes, closets etc. – inside and outside\n- Vacuuming floors and skirting boards\n- Mopping floors (if floor material suitable for damp mopping)",
-  "movingService2Question": "Kitchen",
-  "movingService2Answer": "- Level surfaces\n- Sink, faucet\n- Tile walls\n- Oven hood (except the filter)\n- Microwave (inside and outside)\n- All cabinets + cabinet doors (inside and outside, including trash bins)\n- Outer surfaces of: oven, fridge (deep oven and fridge cleaning must be booked separately)",
-  "movingService3Question": "Toilet and bathroom",
-  "movingService3Answer": "- Sink, faucet\n- Mirrors and glass surfaces\n- Shower area and bathtub\n- Cabinets (inside and outside)\n- Tile walls and visible pipes\n- Floor and floor drain\n- Toilet bowl",
-  "movingService4Question": "Separately ordered services",
-  "movingService4Answer": "- Sauna (floor, benches, glass door) - 1hr\n- Fridge and freezer (must be completely empty & melted beforehand) - 30’\n- Oven (inside + outside) – customer must move the oven beforehand - 1hr\n- Balcony: floor & surfaces (no deep stain removal for concrete floor) - 30’",
-  "movingService5Question": "Not included in the service",
-  "movingService5Answer": "- Oven hood filter\n- Deep stain removal from doors & walls\n- Unclogging drains / pipes\n- Moving heavy furniture (including bulky trash)\n- Anything above 180cm\n- Window cleaning (can be ordered separately)",
+  "movingService3Question": "Other Living Areas",
+  "movingService3Answer": "- Vacuuming floors and carpets\n- Mopping floors and skirting boards\n- Wiping surfaces, mirrors, and glass surfaces\n- Cleaning frequently touched surfaces (e.g., door frames, handles, light switches)\n- Vacuuming/wiping furniture\n- Dusting all reachable surfaces\n- Wiping door frames, handles, and light switches\n- Organizing and stacking items\n- Taking out the trash\n- Vacuuming the balcony floor",
+  "movingService1Question": "Kitchen",
+  "movingService1Answer": "- Oven cleaning\n- Thorough cleaning of countertops and tables\n- Cleaning of the sink, stove, and range hood\n- Cleaning of the backsplash (tile or other surface)\n- Cleaning behind and around the oven (requires moving the appliance)\n- Exterior cleaning of small appliances, microwave, refrigerator, and dishwasher\n- Cleaning the dishwasher interior\n- Cleaning the trash cabinet\n- Dusting all reachable surfaces\n- Cleaning the surfaces of kitchen cabinets and drawers",
+  "movingService2Question": "Toilet and bathroom",
+  "movingService2Answer": "- Cleaning the bathtub, shower, glass shower wall, and shower cabin\n- Washing the entire shower area\n- Cleaning the sauna glass door\n- Wiping/cleaning sinks and faucets\n- Cleaning mirrors and glass surfaces\n- Dusting all surfaces\n- Cleaning the toilet\n- Cleaning the floor drain\n- Scrubbing the floor\n- Organizing and tidying items.",
+  "movingService4Question": "Not included in the service",
+  "movingService4Answer": "- Deep stain removal from doors & walls\n- Unclogging drains / pipes\n- Moving heavy furniture (including bulky trash)\n- Anything above 180cm\n- Balcony hoovered and certain parts wiped\n- Windows and balcony windows cleaned\n- Window blinds dusted\n- Walls dusted",
   "officeService1Question": "Lobbies",
   "officeService1Answer": "- Dismantling of waste containers and if necessary cleaning them, exchange of trash bags\n- Vacuum cleaning and washing the floors\n- Wiping of door handles and circuit breakers\n- Wiping mirrors and tables\n- Wiping window ledges\n- Ensuring general cleanliness\n- Cleaning of glass doors / walls",
   "officeService2Question": "Kitchen",
